Install multiple libraries in workflow

--- a/.github/workflows/run_bot.yml
+++ b/.github/workflows/run_bot.yml
@@ -21,7 +21,8 @@ jobs:
           python-version: '3.9'
           
       - name: Install Libraries
-        run: pip install requests
+        run: |
+          pip install requests beautifulsoup4
           
       - name: Run The Bot
         run: python scraper.py
